Fixed the button align and some margin errors. Fixed attraction search positioning. Fixed attraction margin stuff

--- a/client/CSS/style.css
+++ b/client/CSS/style.css
@@ -213,11 +213,11 @@ button[aria-expanded=false] .fa-angle-up {
 #attraction-search-container {
 	z-index: 100;
 	display: inline;
-	position: absolute;
+	position: relative;
 }
 
 #search-container {
-	margin 4px 0;
+	margin: 8px 4px;
 	background-color: rgba(255, 255, 255, 0.7);
 }
 
@@ -235,9 +235,9 @@ button[aria-expanded=false] .fa-angle-up {
 }
 
 #search-bar {
-	margin: 4px 4px 4px 0px;
 	display: none;
 	position: relative;
+	padding: 4px;
 }
 
 #search-suggestive {
@@ -297,6 +297,7 @@ button[aria-expanded=false] .fa-angle-up {
 	width: 100%;
 	height: 2em;
 	display: flex;
+	margin: 10px;
 }
 
 .handlerc-spacer {
@@ -305,8 +306,9 @@ button[aria-expanded=false] .fa-angle-up {
 }
 
 .handlerc-button {
-	display: inline-flex;
 	height: 100%;
 	padding: 4px;
+	flex: auto;
+	text-align: center;
 }
 
